fix contact input border radius on iPhone

--- a/styles.css
+++ b/styles.css
@@ -355,6 +355,7 @@ Contact
 label,
 input,
 textarea {
+  border-radius: 2px;
   display: block;
   margin: 0 auto;
   text-align: center;
